Use the new hiera hook in all remaining templates
The new hiera hook in I21639f6aadabf9e49f40d1bb0b1d0edcfc4dbc5e
was added to most of the tripleo-heat-templates in
Ibe7e2044e200e2c947223286fdf4fd5bcf98c2e1

The new hook is installed by default if you use tripleo-common
Ia1864933235152b7e899c4442534879f8e22240d and will be installed
as part of the Newton to Ocata upgrades workflow in
I0c7a32194c0069b63a501a913c17907b47c9cc16

In order to use the new hiera data as part of the upgrade we
need to remove the old hieradata which will break anyone still
defining and using it. This change updates the remaining vendor
plugin manifests to use the new hiera hook. The pre-requisite
is that the new hook is installed on their overcloud (as above
it comes if you follow the N..O upgrade)

Change-Id: Ic95154734cb21e6b941c7f1569295b413963831d
(cherry picked from commit c5d10cd9fc94e6557417673190b73867a83cbb7b)

--- a/puppet/extraconfig/all_nodes/neutron-midonet-all-nodes.yaml
+++ b/puppet/extraconfig/all_nodes/neutron-midonet-all-nodes.yaml
@@ -53,41 +53,40 @@ resources:
   NetworkMidoNetConfig:
     type: OS::Heat::StructuredConfig
     properties:
-      group: os-apply-config
+      group: hiera
       config:
-        hiera:
-          datafiles:
-            midonet_data:
-              mapped_data:
-                enable_zookeeper_on_controller: {get_param: EnableZookeeperOnController}
-                enable_cassandra_on_controller: {get_param: EnableCassandraOnController}
-                midonet_tunnelzone_name: {get_param: TunnelZoneName}
-                midonet_tunnelzone_type: {get_param: TunnelZoneType}
-                midonet_libvirt_qemu_data: |
-                    user = "root"
-                    group = "root"
-                    cgroup_device_acl = [
-                        "/dev/null", "/dev/full", "/dev/zero",
-                        "/dev/random", "/dev/urandom",
-                        "/dev/ptmx", "/dev/kvm", "/dev/kqemu",
-                        "/dev/rtc","/dev/hpet", "/dev/vfio/vfio",
-                        "/dev/net/tun"
-                    ]
-                tripleo::cluster::cassandra::storage_port: {get_param: CassandraStoragePort}
-                tripleo::cluster::cassandra::ssl_storage_port: {get_param: CassandraSslStoragePort}
-                tripleo::cluster::cassandra::client_port: {get_param: CassandraClientPort}
-                tripleo::cluster::cassandra::client_port_thrift: {get_param: CassandraClientPortThrift}
-                tripleo::haproxy::midonet_api: true
-                # Missed Neutron Puppet data
-                neutron::agents::dhcp::interface_driver: 'neutron.agent.linux.interface.MidonetInterfaceDriver'
-                neutron::agents::dhcp::dhcp_driver: 'midonet.neutron.agent.midonet_driver.DhcpNoOpDriver'
-                neutron::plugins::midonet::midonet_api_port: 8081
-                neutron::params::midonet_server_package: 'python-networking-midonet'
+        datafiles:
+          midonet_data:
+            mapped_data:
+              enable_zookeeper_on_controller: {get_param: EnableZookeeperOnController}
+              enable_cassandra_on_controller: {get_param: EnableCassandraOnController}
+              midonet_tunnelzone_name: {get_param: TunnelZoneName}
+              midonet_tunnelzone_type: {get_param: TunnelZoneType}
+              midonet_libvirt_qemu_data: |
+                  user = "root"
+                  group = "root"
+                  cgroup_device_acl = [
+                      "/dev/null", "/dev/full", "/dev/zero",
+                      "/dev/random", "/dev/urandom",
+                      "/dev/ptmx", "/dev/kvm", "/dev/kqemu",
+                      "/dev/rtc","/dev/hpet", "/dev/vfio/vfio",
+                      "/dev/net/tun"
+                  ]
+              tripleo::cluster::cassandra::storage_port: {get_param: CassandraStoragePort}
+              tripleo::cluster::cassandra::ssl_storage_port: {get_param: CassandraSslStoragePort}
+              tripleo::cluster::cassandra::client_port: {get_param: CassandraClientPort}
+              tripleo::cluster::cassandra::client_port_thrift: {get_param: CassandraClientPortThrift}
+              tripleo::haproxy::midonet_api: true
+              # Missed Neutron Puppet data
+              neutron::agents::dhcp::interface_driver: 'neutron.agent.linux.interface.MidonetInterfaceDriver'
+              neutron::agents::dhcp::dhcp_driver: 'midonet.neutron.agent.midonet_driver.DhcpNoOpDriver'
+              neutron::plugins::midonet::midonet_api_port: 8081
+              neutron::params::midonet_server_package: 'python-networking-midonet'
 
-                # Make sure the l3 agent does not run
-                l3_agent_service: false
-                neutron::agents::l3::manage_service: false
-                neutron::agents::l3::enabled: false
+              # Make sure the l3 agent does not run
+              l3_agent_service: false
+              neutron::agents::l3::manage_service: false
+              neutron::agents::l3::enabled: false
 
 
   NetworkMidonetDeploymentControllers:
