--- a/puppet/extraconfig/pre_deploy/compute/neutron-ml2-bigswitch.yaml
+++ b/puppet/extraconfig/pre_deploy/compute/neutron-ml2-bigswitch.yaml
@@ -20,14 +20,13 @@ resources:
   NeutronBigswitchConfig:
     type: OS::Heat::StructuredConfig
     properties:
-      group: os-apply-config
+      group: hiera
       config:
-        hiera:
-          datafiles:
-            neutron_bigswitch_data:
-              mapped_data:
-                neutron::agents::bigswitch::agent_enabled: {get_input: neutron_enable_bigswitch_agent}
-                neutron::agents::bigswitch::lldp_enabled: {get_input: neutron_enable_bigswitch_lldp}
+        datafiles:
+          neutron_bigswitch_data:
+            mapped_data:
+              neutron::agents::bigswitch::agent_enabled: {get_input: neutron_enable_bigswitch_agent}
+              neutron::agents::bigswitch::lldp_enabled: {get_input: neutron_enable_bigswitch_lldp}
 
   NeutronBigswitchDeployment:
     type: OS::Heat::StructuredDeployment
