--- a/puppet/extraconfig/pre_deploy/compute/nova-nuage.yaml
+++ b/puppet/extraconfig/pre_deploy/compute/nova-nuage.yaml
@@ -50,22 +50,21 @@ resources:
   NovaNuageConfig:
     type: OS::Heat::StructuredConfig
     properties:
-      group: os-apply-config
+      group: hiera
       config:
-        hiera:
-          datafiles:
-            nova_nuage_data:
-              mapped_data:
-               nuage::vrs::active_controller: {get_input: ActiveController}
-               nuage::vrs::standby_controller: {get_input: StandbyController}
-               nuage::metadataagent::metadata_port: {get_input: MetadataPort}
-               nuage::metadataagent::nova_metadata_port: {get_input: NovaMetadataPort}
-               nuage::metadataagent::metadata_secret: {get_input: SharedSecret}
-               nuage::metadataagent::nova_client_version: {get_input: NovaClientVersion}
-               nuage::metadataagent::nova_os_username: {get_input: NovaOsUsername}
-               nuage::metadataagent::metadata_agent_start_with_ovs: {get_input: MetadataAgentStartWithOvs}
-               nuage::metadataagent::nova_api_endpoint_type: {get_input: NovaApiEndpointType}
-               nuage::metadataagent::nova_region_name: {get_input: NovaRegionName}
+        datafiles:
+          nova_nuage_data:
+            mapped_data:
+             nuage::vrs::active_controller: {get_input: ActiveController}
+             nuage::vrs::standby_controller: {get_input: StandbyController}
+             nuage::metadataagent::metadata_port: {get_input: MetadataPort}
+             nuage::metadataagent::nova_metadata_port: {get_input: NovaMetadataPort}
+             nuage::metadataagent::metadata_secret: {get_input: SharedSecret}
+             nuage::metadataagent::nova_client_version: {get_input: NovaClientVersion}
+             nuage::metadataagent::nova_os_username: {get_input: NovaOsUsername}
+             nuage::metadataagent::metadata_agent_start_with_ovs: {get_input: MetadataAgentStartWithOvs}
+             nuage::metadataagent::nova_api_endpoint_type: {get_input: NovaApiEndpointType}
+             nuage::metadataagent::nova_region_name: {get_input: NovaRegionName}
 
   NovaNuageDeployment:
     type: OS::Heat::StructuredDeployment
