--- a/puppet/extraconfig/pre_deploy/controller/neutron-ml2-cisco-n1kv.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/neutron-ml2-cisco-n1kv.yaml
@@ -96,48 +96,47 @@ resources:
   CiscoN1kvConfig:
     type: OS::Heat::StructuredConfig
     properties:
-      group: os-apply-config
+      group: hiera
       config:
-        hiera:
-          datafiles:
-            cisco_n1kv_data:
-              mapped_data:
-                #enable_cisco_n1kv: {get_input: EnableCiscoN1kv}
-                # VEM Parameters
-                n1kv_vem_source: {get_input: n1kv_vem_source}
-                n1kv_vem_version: {get_input: n1kv_vem_version}
-                neutron::agents::n1kv_vem::n1kv_vsm_ip: {get_input: n1kv_vsm_ip}
-                neutron::agents::n1kv_vem::n1kv_vsm_domain_id: {get_input: n1kv_vsm_domain_id}
-                neutron::agents::n1kv_vem::n1kv_vsm_ip_v6: {get_input: n1kv_vsm_ip_v6}
-                neutron::agents::n1kv_vem::host_mgmt_intf: {get_input: n1kv_vem_host_mgmt_intf}
-                neutron::agents::n1kv_vem::uplink_profile: {get_input: n1kv_vem_uplink_profile}
-                neutron::agents::n1kv_vem::vtep_config: {get_input: n1kv_vem_vtep_config}
-                neutron::agents::n1kv_vem::portdb: {get_input: n1kv_vem_portdb}
-                neutron::agents::n1kv_vem::vteps_in_same_subnet: {get_input: n1kv_vem_vteps_in_same_subnet}
-                neutron::agents::n1kv_vem::fastpath_flood: {get_input: n1kv_vem_fastpath_flood}
-                #VSM Parameter
-                n1kv_vsm_source: {get_input: n1kv_vsm_source}
-                n1kv_vsm_version: {get_input: n1kv_vsm_version}
-                n1k_vsm::phy_if_bridge: {get_input: n1kv_vsm_host_mgmt_intf}
-                n1k_vsm::vsm_role: {get_input: n1kv_vsm_role}
-                n1k_vsm::pacemaker_control: {get_input: n1kv_vsm_pacemaker_ctrl}
-                n1k_vsm::existing_bridge: {get_input: n1kv_vsm_existing_br}
-                n1k_vsm::vsm_admin_passwd: {get_input: n1kv_vsm_password}
-                n1k_vsm::vsm_domain_id: {get_input: n1kv_vsm_domain_id}
-                n1k_vsm::vsm_mgmt_ip: {get_input: n1kv_vsm_ip}
-                n1k_vsm::vsm_mgmt_netmask: {get_input: n1kv_vsm_mgmt_netmask}
-                n1k_vsm::vsm_mgmt_gateway: {get_input: n1kv_vsm_gateway_ip}
-                n1k_vsm::phy_gateway: {get_input: n1kv_vsm_gateway_ip}
-                n1k_vsm::phy_bridge_vlan: {get_input: n1kv_phy_brige_vlan}
-                # Cisco N1KV driver Parameters
-                neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_ip: {get_input: n1kv_vsm_ip}
-                neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_username: {get_input: n1kv_vsm_username}
-                neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_password: {get_input: n1kv_vsm_password}
-                neutron::plugins::ml2::cisco::nexus1000v::poll_duration: {get_input: n1kv_vsm_poll_duration}
-                neutron::plugins::ml2::cisco::nexus1000v::http_pool_size: {get_input: n1kv_vsm_http_pool_size}
-                neutron::plugins::ml2::cisco::nexus1000v::http_timeout: {get_input: n1kv_vsm_http_timeout}
-                neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_sync_interval: {get_input: n1kv_vsm_sync_interval}
-                neutron::plugins::ml2::cisco::nexus1000v::max_vsm_retries: {get_input: n1kv_max_vsm_retries}
+        datafiles:
+          cisco_n1kv_data:
+            mapped_data:
+              #enable_cisco_n1kv: {get_input: EnableCiscoN1kv}
+              # VEM Parameters
+              n1kv_vem_source: {get_input: n1kv_vem_source}
+              n1kv_vem_version: {get_input: n1kv_vem_version}
+              neutron::agents::n1kv_vem::n1kv_vsm_ip: {get_input: n1kv_vsm_ip}
+              neutron::agents::n1kv_vem::n1kv_vsm_domain_id: {get_input: n1kv_vsm_domain_id}
+              neutron::agents::n1kv_vem::n1kv_vsm_ip_v6: {get_input: n1kv_vsm_ip_v6}
+              neutron::agents::n1kv_vem::host_mgmt_intf: {get_input: n1kv_vem_host_mgmt_intf}
+              neutron::agents::n1kv_vem::uplink_profile: {get_input: n1kv_vem_uplink_profile}
+              neutron::agents::n1kv_vem::vtep_config: {get_input: n1kv_vem_vtep_config}
+              neutron::agents::n1kv_vem::portdb: {get_input: n1kv_vem_portdb}
+              neutron::agents::n1kv_vem::vteps_in_same_subnet: {get_input: n1kv_vem_vteps_in_same_subnet}
+              neutron::agents::n1kv_vem::fastpath_flood: {get_input: n1kv_vem_fastpath_flood}
+              #VSM Parameter
+              n1kv_vsm_source: {get_input: n1kv_vsm_source}
+              n1kv_vsm_version: {get_input: n1kv_vsm_version}
+              n1k_vsm::phy_if_bridge: {get_input: n1kv_vsm_host_mgmt_intf}
+              n1k_vsm::vsm_role: {get_input: n1kv_vsm_role}
+              n1k_vsm::pacemaker_control: {get_input: n1kv_vsm_pacemaker_ctrl}
+              n1k_vsm::existing_bridge: {get_input: n1kv_vsm_existing_br}
+              n1k_vsm::vsm_admin_passwd: {get_input: n1kv_vsm_password}
+              n1k_vsm::vsm_domain_id: {get_input: n1kv_vsm_domain_id}
+              n1k_vsm::vsm_mgmt_ip: {get_input: n1kv_vsm_ip}
+              n1k_vsm::vsm_mgmt_netmask: {get_input: n1kv_vsm_mgmt_netmask}
+              n1k_vsm::vsm_mgmt_gateway: {get_input: n1kv_vsm_gateway_ip}
+              n1k_vsm::phy_gateway: {get_input: n1kv_vsm_gateway_ip}
+              n1k_vsm::phy_bridge_vlan: {get_input: n1kv_phy_brige_vlan}
+              # Cisco N1KV driver Parameters
+              neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_ip: {get_input: n1kv_vsm_ip}
+              neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_username: {get_input: n1kv_vsm_username}
+              neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_password: {get_input: n1kv_vsm_password}
+              neutron::plugins::ml2::cisco::nexus1000v::poll_duration: {get_input: n1kv_vsm_poll_duration}
+              neutron::plugins::ml2::cisco::nexus1000v::http_pool_size: {get_input: n1kv_vsm_http_pool_size}
+              neutron::plugins::ml2::cisco::nexus1000v::http_timeout: {get_input: n1kv_vsm_http_timeout}
+              neutron::plugins::ml2::cisco::nexus1000v::n1kv_vsm_sync_interval: {get_input: n1kv_vsm_sync_interval}
+              neutron::plugins::ml2::cisco::nexus1000v::max_vsm_retries: {get_input: n1kv_max_vsm_retries}
 
   CiscoN1kvDeployment:
     type: OS::Heat::StructuredDeployment
