--- a/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/cinder-netapp.yaml
@@ -91,35 +91,34 @@ resources:
   CinderNetappConfig:
     type: OS::Heat::StructuredConfig
     properties:
-      group: os-apply-config
+      group: hiera
       config:
-        hiera:
-          datafiles:
-            cinder_netapp_data:
-              mapped_data:
-                tripleo::profile::base::cinder::volume::cinder_enable_netapp_backend: {get_input: EnableNetappBackend}
-                cinder::backend::netapp::title: {get_input: NetappBackendName}
-                cinder::backend::netapp::netapp_login: {get_input: NetappLogin}
-                cinder::backend::netapp::netapp_password: {get_input: NetappPassword}
-                cinder::backend::netapp::netapp_server_hostname: {get_input: NetappServerHostname}
-                cinder::backend::netapp::netapp_server_port: {get_input: NetappServerPort}
-                cinder::backend::netapp::netapp_size_multiplier: {get_input: NetappSizeMultiplier}
-                cinder::backend::netapp::netapp_storage_family: {get_input: NetappStorageFamily}
-                cinder::backend::netapp::netapp_storage_protocol: {get_input: NetappStorageProtocol}
-                cinder::backend::netapp::netapp_transport_type: {get_input: NetappTransportType}
-                cinder::backend::netapp::netapp_vfiler: {get_input: NetappVfiler}
-                cinder::backend::netapp::netapp_volume_list: {get_input: NetappVolumeList}
-                cinder::backend::netapp::netapp_vserver: {get_input: NetappVserver}
-                cinder::backend::netapp::netapp_partner_backend_name: {get_input: NetappPartnerBackendName}
-                cinder::backend::netapp::nfs_shares: {get_input: NetappNfsShares}
-                cinder::backend::netapp::nfs_shares_config: {get_input: NetappNfsSharesConfig}
-                cinder::backend::netapp::nfs_mount_options: {get_input: NetappNfsMountOptions}
-                cinder::backend::netapp::netapp_copyoffload_tool_path: {get_input: NetappCopyOffloadToolPath}
-                cinder::backend::netapp::netapp_controller_ips: {get_input: NetappControllerIps}
-                cinder::backend::netapp::netapp_sa_password: {get_input: NetappSaPassword}
-                cinder::backend::netapp::netapp_storage_pools: {get_input: NetappStoragePools}
-                cinder::backend::netapp::netapp_host_type: {get_input: NetappHostType}
-                cinder::backend::netapp::netapp_webservice_path: {get_input: NetappWebservicePath}
+        datafiles:
+          cinder_netapp_data:
+            mapped_data:
+              tripleo::profile::base::cinder::volume::cinder_enable_netapp_backend: {get_input: EnableNetappBackend}
+              cinder::backend::netapp::title: {get_input: NetappBackendName}
+              cinder::backend::netapp::netapp_login: {get_input: NetappLogin}
+              cinder::backend::netapp::netapp_password: {get_input: NetappPassword}
+              cinder::backend::netapp::netapp_server_hostname: {get_input: NetappServerHostname}
+              cinder::backend::netapp::netapp_server_port: {get_input: NetappServerPort}
+              cinder::backend::netapp::netapp_size_multiplier: {get_input: NetappSizeMultiplier}
+              cinder::backend::netapp::netapp_storage_family: {get_input: NetappStorageFamily}
+              cinder::backend::netapp::netapp_storage_protocol: {get_input: NetappStorageProtocol}
+              cinder::backend::netapp::netapp_transport_type: {get_input: NetappTransportType}
+              cinder::backend::netapp::netapp_vfiler: {get_input: NetappVfiler}
+              cinder::backend::netapp::netapp_volume_list: {get_input: NetappVolumeList}
+              cinder::backend::netapp::netapp_vserver: {get_input: NetappVserver}
+              cinder::backend::netapp::netapp_partner_backend_name: {get_input: NetappPartnerBackendName}
+              cinder::backend::netapp::nfs_shares: {get_input: NetappNfsShares}
+              cinder::backend::netapp::nfs_shares_config: {get_input: NetappNfsSharesConfig}
+              cinder::backend::netapp::nfs_mount_options: {get_input: NetappNfsMountOptions}
+              cinder::backend::netapp::netapp_copyoffload_tool_path: {get_input: NetappCopyOffloadToolPath}
+              cinder::backend::netapp::netapp_controller_ips: {get_input: NetappControllerIps}
+              cinder::backend::netapp::netapp_sa_password: {get_input: NetappSaPassword}
+              cinder::backend::netapp::netapp_storage_pools: {get_input: NetappStoragePools}
+              cinder::backend::netapp::netapp_host_type: {get_input: NetappHostType}
+              cinder::backend::netapp::netapp_webservice_path: {get_input: NetappWebservicePath}
 
   CinderNetappDeployment:
     type: OS::Heat::StructuredDeployment
