Remove double quotes in the "when" Ansible conditional.
Change-Id: I677075012a948c7c32959680608255eff919b8d4

--- a/puppet/services/heat-api-cloudwatch.yaml
+++ b/puppet/services/heat-api-cloudwatch.yaml
@@ -114,7 +114,7 @@ outputs:
         - name: Stop heat_api_cloudwatch service (running under httpd)
           tags: step1
           service: name=httpd state=stopped
-          when: "heat_api_cloudwatch_apache.rc == 0"
+          when: heat_api_cloudwatch_apache.rc == 0
         - name: Stop and disable heat_api_cloudwatch service (pre-upgrade not under httpd)
           tags: step1
           when: heat_api_cloudwatch_enabled.rc == 0
