--- a/puppet/services/heat-api.yaml
+++ b/puppet/services/heat-api.yaml
@@ -130,7 +130,7 @@ outputs:
         - name: Stop heat_api service (running under httpd)
           tags: step1
           service: name=httpd state=stopped
-          when: "heat_api_apache.rc == 0"
+          when: heat_api_apache.rc == 0
         - name: Stop and disable heat_api service (pre-upgrade not under httpd)
           tags: step1
           when: heat_api_enabled.rc == 0
