--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -167,7 +167,7 @@ outputs:
         - name: Stop cinder_api service (running under httpd)
           tags: step1
           service: name=httpd state=stopped
-          when: "cinder_apache.rc == 0"
+          when: cinder_apache.rc == 0
         - name: Stop and disable cinder_api service (pre-upgrade not under httpd)
           tags: step1
           when: cinder_api_enabled.rc == 0
