--- a/puppet/services/heat-api-cfn.yaml
+++ b/puppet/services/heat-api-cfn.yaml
@@ -130,7 +130,7 @@ outputs:
         - name: Stop heat_api_cfn service (running under httpd)
           tags: step1
           service: name=httpd state=stopped
-          when: "heat_api_cfn_apache.rc == 0"
+          when: heat_api_cfn_apache.rc == 0
         - name: Stop and disable heat_api_cfn service (pre-upgrade not under httpd)
           tags: step1
           when: heat_api_cfn_apache.rc == 0
