Enable keystone cadf notifications
It will allow to configure keystone event notifications
using CADF, as documented on:
https://docs.openstack.org/developer/keystone/event_notifications.html

CADF events provide auditing capabilities for compliance with
security.

Change-Id: Id16b264c295b9e3adbf960366ff8328ba8dcd485

--- a/capabilities-map.yaml
+++ b/capabilities-map.yaml
@@ -582,3 +582,8 @@ topics:
             description:
             requires:
               - overcloud-resource-registry-puppet.yaml
+      - title: Keystone CADF auditing
+        description: Enable CADF notifications in Keystone for auditing
+        environments:
+          - file: environments/cadf.yaml
+            title: Keystone CADF auditing
