--- a/docker/services/glance-api.yaml
+++ b/docker/services/glance-api.yaml
@@ -49,15 +49,14 @@ outputs:
         get_attr: [GlanceApiPuppetBase, role_data, step_config]
       service_config_settings: {get_attr: [GlanceApiPuppetBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS #
-      docker_image: &glance_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerGlanceApiImage} ]
       puppet_config:
         config_volume: glance_api
         puppet_tags: glance_api_config,glance_api_paste_ini,glance_swift_config,glance_cache_config
         step_config: *step_config
-        config_image: *glance_image
+        config_image: &glance_image
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerGlanceApiImage} ]
       kolla_config:
          /var/lib/kolla/config_files/glance-api.json:
            command: /usr/bin/glance-api --config-file /usr/share/glance/glance-api-dist.conf --config-file /etc/glance/glance-api.conf
