--- a/docker/services/heat-api.yaml
+++ b/docker/services/heat-api.yaml
@@ -55,10 +55,6 @@ outputs:
         get_attr: [HeatBase, role_data, step_config]
       service_config_settings: {get_attr: [HeatBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &heat_api_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerHeatApiImage} ]
       puppet_config:
         config_volume: heat
         puppet_tags: heat_config,file,concat,file_line
@@ -78,7 +74,10 @@ outputs:
       docker_config:
         step_4:
           heat_api:
-            image: *heat_api_image
+            image:
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerHeatApiImage} ]
             net: host
             privileged: false
             restart: always
