--- a/docker/services/ironic-api.yaml
+++ b/docker/services/ironic-api.yaml
@@ -52,10 +52,6 @@ outputs:
         get_attr: [IronicApiBase, role_data, step_config]
       service_config_settings: {get_attr: [IronicApiBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &ironic_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerIronicApiImage} ]
       puppet_config:
         config_volume: ironic
         puppet_tags: ironic_config
@@ -75,7 +71,10 @@ outputs:
       docker_config:
         step_3:
           ironic_db_sync:
-            image: *ironic_image
+            image: &ironic_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerIronicApiImage} ]
             net: host
             privileged: false
             detach: false
