--- a/docker/services/ironic-conductor.yaml
+++ b/docker/services/ironic-conductor.yaml
@@ -59,10 +59,6 @@ outputs:
         get_attr: [IronicConductorBase, role_data, step_config]
       service_config_settings: {get_attr: [IronicConductorBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &ironic_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerIronicConductorImage} ]
       puppet_config:
         config_volume: ironic
         puppet_tags: ironic_config
@@ -89,7 +85,10 @@ outputs:
       docker_config:
         step_4:
           ironic-init-dirs:
-            image: *ironic_image
+            image: &ironic_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerIronicConductorImage} ]
             user: root
             command: ['/bin/bash', '-c', 'mkdir /var/lib/ironic/httpboot && mkdir /var/lib/ironic/tftpboot']
             volumes:
