--- a/docker/services/ironic-pxe.yaml
+++ b/docker/services/ironic-pxe.yaml
@@ -40,10 +40,6 @@ outputs:
       step_config: &step_config ''
       service_config_settings: {}
       # BEGIN DOCKER SETTINGS
-      docker_image: &ironic_pxe_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerIronicPxeImage} ]
       puppet_config:
         config_volume: ironic
         puppet_tags: ironic_config
@@ -103,7 +99,10 @@ outputs:
         step_4:
           ironic_pxe_tftp:
             start_order: 90
-            image: *ironic_pxe_image
+            image: &ironic_pxe_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerIronicPxeImage} ]
             net: host
             privileged: false
             restart: always
