--- a/docker/services/memcached.yaml
+++ b/docker/services/memcached.yaml
@@ -46,15 +46,14 @@ outputs:
         get_attr: [MemcachedBase, role_data, step_config]
       service_config_settings: {get_attr: [MemcachedBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &memcached_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerMemcachedImage} ]
       puppet_config:
         config_volume: 'memcached'
         puppet_tags: 'file'
         step_config: *step_config
-        config_image: *memcached_image
+        config_image: &memcached_image
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerMemcachedImage} ]
       kolla_config: {}
       docker_config:
         step_1:
