--- a/docker/services/mistral-api.yaml
+++ b/docker/services/mistral-api.yaml
@@ -52,10 +52,6 @@ outputs:
         get_attr: [MistralApiBase, role_data, step_config]
       service_config_settings: {get_attr: [MistralApiBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &mistral_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerMistralApiImage} ]
       puppet_config:
         config_volume: mistral
         puppet_tags: mistral_config
@@ -76,7 +72,10 @@ outputs:
         step_3:
           mistral_db_sync:
             start_order: 1
-            image: *mistral_image
+            image: &mistral_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerMistralApiImage} ]
             net: host
             privileged: false
             detach: false
