--- a/docker/services/neutron-l3.yaml
+++ b/docker/services/neutron-l3.yaml
@@ -49,11 +49,6 @@ outputs:
       config_settings: {get_attr: [NeutronL3Base, role_data, config_settings]}
       step_config: &step_config
         get_attr: [NeutronL3Base, role_data, step_config]
-      docker_image: &neutron_l3_agent_image
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerNeutronL3AgentImage} ]
-
       puppet_config:
         puppet_tags: neutron_config,neutron_l3_agent_config
         config_volume: neutron
@@ -77,7 +72,10 @@ outputs:
       docker_config:
         step_4:
           neutronl3agent:
-            image: *neutron_l3_agent_image
+            image: &neutron_l3_agent_image
+              list_join:
+              - '/'
+              - [ {get_param: DockerNamespace}, {get_param: DockerNeutronL3AgentImage} ]
             net: host
             pid: host
             privileged: true
