--- a/docker/services/nova-conductor.yaml
+++ b/docker/services/nova-conductor.yaml
@@ -51,10 +51,6 @@ outputs:
         get_attr: [NovaConductorBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaConductorBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &nova_conductor_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerNovaConductorImage} ]
       puppet_config:
         config_volume: nova
         puppet_tags: nova_config
@@ -74,7 +70,10 @@ outputs:
       docker_config:
         step_4:
           nova_conductor:
-            image: *nova_conductor_image
+            image: &nova_conductor_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerNovaConductorImage} ]
             net: host
             privileged: false
             restart: always
