--- a/docker/services/nova-ironic.yaml
+++ b/docker/services/nova-ironic.yaml
@@ -47,10 +47,6 @@ outputs:
       config_settings: {get_attr: [NovaIronicBase, role_data, config_settings]}
       step_config: &step_config
         get_attr: [NovaIronicBase, role_data, step_config]
-      docker_image: &nova_ironic_image
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerNovaComputeImage} ]
       puppet_config:
         config_volume: nova
         puppet_tags: nova_config,nova_paste_api_ini
@@ -74,7 +70,10 @@ outputs:
       docker_config:
         step_5:
           novacompute:
-            image: *nova_ironic_image
+            image:
+              list_join:
+              - '/'
+              - [ {get_param: DockerNamespace}, {get_param: DockerNovaComputeImage} ]
             net: host
             privileged: true
             user: root
