--- a/docker/services/nova-libvirt.yaml
+++ b/docker/services/nova-libvirt.yaml
@@ -50,10 +50,6 @@ outputs:
       config_settings: {get_attr: [NovaLibvirtBase, role_data, config_settings]}
       step_config: &step_config
         get_attr: [NovaLibvirtBase, role_data, step_config]
-      docker_image: &libvirt_image
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerLibvirtImage} ]
       puppet_config:
         config_volume: nova_libvirt
         puppet_tags: nova_config
@@ -73,7 +69,10 @@ outputs:
       docker_config:
         step_3:
           nova_libvirt:
-            image: *libvirt_image
+            image:
+              list_join:
+              - '/'
+              - [ {get_param: DockerNamespace}, {get_param: DockerLibvirtImage} ]
             net: host
             pid: host
             privileged: true
