--- a/docker/services/nova-placement.yaml
+++ b/docker/services/nova-placement.yaml
@@ -49,10 +49,6 @@ outputs:
         get_attr: [NovaPlacementBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaPlacementBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &nova_placement_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerNovaPlacementImage} ]
       puppet_config:
         config_volume: nova_placement
         puppet_tags: nova_config
@@ -96,7 +92,10 @@ outputs:
         step_3:
           nova_placement:
             start_order: 1
-            image: *nova_placement_image
+            image:
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerNovaPlacementImage} ]
             net: host
             user: root
             restart: always
