--- a/docker/services/nova-scheduler.yaml
+++ b/docker/services/nova-scheduler.yaml
@@ -50,10 +50,6 @@ outputs:
         get_attr: [NovaSchedulerBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaSchedulerBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &nova_scheduler_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerNovaSchedulerImage} ]
       puppet_config:
         config_volume: nova
         puppet_tags: nova_config
@@ -73,7 +69,10 @@ outputs:
       docker_config:
         step_4:
           nova_scheduler:
-            image: *nova_scheduler_image
+            image:
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerNovaSchedulerImage} ]
             net: host
             privileged: false
             restart: always
