--- a/docker/services/swift-ringbuilder.yaml
+++ b/docker/services/swift-ringbuilder.yaml
@@ -70,14 +70,13 @@ outputs:
         get_attr: [SwiftRingbuilderBase, role_data, step_config]
       service_config_settings: {get_attr: [SwiftRingbuilderBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &docker_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerSwiftProxyImage} ]
       puppet_config:
         config_volume: 'swift'
         puppet_tags: exec,ring_object_device,swift::ringbuilder::create,tripleo::profile::base::swift::add_devices,swift::ringbuilder::rebalance
         step_config: *step_config
-        config_image: *docker_image
+        config_image:
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerSwiftProxyImage} ]
       kolla_config: {}
       docker_config: {}
