--- a/docker/services/heat-engine.yaml
+++ b/docker/services/heat-engine.yaml
@@ -50,15 +50,14 @@ outputs:
         get_attr: [HeatBase, role_data, step_config]
       service_config_settings: {get_attr: [HeatBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &heat_engine_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerHeatEngineImage} ]
       puppet_config:
         config_volume: heat
         puppet_tags: heat_config,file,concat,file_line
         step_config: *step_config
-        config_image: *heat_engine_image
+        config_image: &heat_engine_image
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerHeatEngineImage} ]
       kolla_config:
          /var/lib/kolla/config_files/heat_engine.json:
            command: /usr/bin/heat-engine --config-file /usr/share/heat/heat-dist.conf --config-file /etc/heat/heat.conf
