--- a/docker/services/mistral-executor.yaml
+++ b/docker/services/mistral-executor.yaml
@@ -53,10 +53,6 @@ outputs:
         get_attr: [MistralBase, role_data, step_config]
       service_config_settings: {get_attr: [MistralBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &mistral_executor_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerMistralExecutorImage} ]
       puppet_config:
         config_volume: mistral
         puppet_tags: mistral_config
@@ -76,7 +72,10 @@ outputs:
       docker_config:
         step_4:
           mistral_executor:
-            image: *mistral_executor_image
+            image: &mistral_executor_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerMistralExecutorImage} ]
             net: host
             privileged: false
             restart: always
