--- a/docker/services/neutron-dhcp.yaml
+++ b/docker/services/neutron-dhcp.yaml
@@ -53,10 +53,6 @@ outputs:
         get_attr: [NeutronBase, role_data, step_config]
       service_config_settings: {get_attr: [NeutronBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &neutron_dhcp_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerNeutronApiImage} ]
       puppet_config:
         config_volume: neutron
         puppet_tags: neutron_config,neutron_dhcp_agent_config
@@ -80,7 +76,10 @@ outputs:
       docker_config:
         step_4:
           neutron_dhcp:
-            image: *neutron_dhcp_image
+            image: &neutron_dhcp_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerNeutronApiImage} ]
             net: host
             pid: host
             privileged: true
