--- a/docker/services/neutron-ovs-agent.yaml
+++ b/docker/services/neutron-ovs-agent.yaml
@@ -44,15 +44,14 @@ outputs:
       config_settings: {get_attr: [NeutronOvsAgentBase, role_data, config_settings]}
       step_config: &step_config
         get_attr: [NeutronOvsAgentBase, role_data, step_config]
-      docker_image: &neutron_ovs_agent_image
-        list_join:
-        - '/'
-        - [ {get_param: DockerNamespace}, {get_param: DockerOpenvswitchImage} ]
       puppet_config:
         config_volume: neutron
         puppet_tags: neutron_config,neutron_agent_ovs,neutron_plugin_ml2
         step_config: *step_config
-        config_image: *neutron_ovs_agent_image
+        config_image: &neutron_ovs_agent_image
+          list_join:
+          - '/'
+          - [ {get_param: DockerNamespace}, {get_param: DockerOpenvswitchImage} ]
       kolla_config:
         /var/lib/kolla/config_files/neutron-openvswitch-agent.json:
            command: /usr/bin/neutron-openvswitch-agent --config-file /usr/share/neutron/neutron-dist.conf --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/plugins/ml2/openvswitch_agent.ini --config-file /etc/neutron/plugins/ml2/ml2_conf.ini
