--- a/docker/services/nova-api.yaml
+++ b/docker/services/nova-api.yaml
@@ -53,10 +53,6 @@ outputs:
         get_attr: [NovaApiBase, role_data, step_config]
       service_config_settings: {get_attr: [NovaApiBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &nova_api_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerNovaApiImage} ]
       puppet_config:
         config_volume: nova
         puppet_tags: nova_config
@@ -77,7 +73,10 @@ outputs:
         step_3:
           nova_api_db_sync:
             start_order: 1
-            image: *nova_api_image
+            image: &nova_api_image
+              list_join:
+                - '/'
+                - [ {get_param: DockerNamespace}, {get_param: DockerNovaApiImage} ]
             net: host
             detach: false
             volumes: &nova_api_volumes
