--- a/docker/services/rabbitmq.yaml
+++ b/docker/services/rabbitmq.yaml
@@ -50,15 +50,14 @@ outputs:
         get_attr: [RabbitmqBase, role_data, step_config]
       service_config_settings: {get_attr: [RabbitmqBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &rabbitmq_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerRabbitmqImage} ]
       puppet_config:
         config_volume: rabbitmq
         puppet_tags: file
         step_config: *step_config
-        config_image: *rabbitmq_image
+        config_image: &rabbitmq_image
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerRabbitmqImage} ]
       kolla_config:
         /var/lib/kolla/config_files/rabbitmq.json:
           command: /usr/lib/rabbitmq/bin/rabbitmq-server
