--- a/docker/services/swift-proxy.yaml
+++ b/docker/services/swift-proxy.yaml
@@ -46,15 +46,14 @@ outputs:
         get_attr: [SwiftProxyBase, role_data, step_config]
       service_config_settings: {get_attr: [SwiftProxyBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &swift_proxy_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerSwiftProxyImage} ]
       puppet_config:
         config_volume: swift
         puppet_tags: swift_proxy_config
         step_config: *step_config
-        config_image: *swift_proxy_image
+        config_image: &swift_proxy_image
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerSwiftProxyImage} ]
       kolla_config:
         /var/lib/kolla/config_files/swift_proxy.json:
           command: /usr/bin/swift-proxy-server /etc/swift/proxy-server.conf
