--- a/docker/services/zaqar.yaml
+++ b/docker/services/zaqar.yaml
@@ -46,15 +46,14 @@ outputs:
        get_attr: [ZaqarBase, role_data, step_config]
       service_config_settings: {get_attr: [ZaqarBase, role_data, service_config_settings]}
       # BEGIN DOCKER SETTINGS
-      docker_image: &zaqar_image
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerZaqarImage} ]
       puppet_config:
         config_volume: zaqar
         puppet_tags: zaqar_config
         step_config: *step_config
-        config_image: *zaqar_image
+        config_image: &zaqar_image
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerZaqarImage} ]
       kolla_config:
         /var/lib/kolla/config_files/zaqar.json:
           command: /usr/bin/zaqar-server --config-file /etc/zaqar/zaqar.conf
