Add puppet_config to docker neutron-l3 service
This patch makes the neutron-l3 docker service adhere
to the new puppet_config interface.

Change-Id: If5b73ec90637e878af55c8404d1eff8c18e857c3

--- a/docker/services/neutron-l3.yaml
+++ b/docker/services/neutron-l3.yaml
@@ -47,17 +47,21 @@ outputs:
     value:
       service_name: {get_attr: [NeutronL3Base, role_data, service_name]}
       config_settings: {get_attr: [NeutronL3Base, role_data, config_settings]}
-      step_config: {get_attr: [NeutronL3Base, role_data, step_config]}
+      step_config: &step_config
+        get_attr: [NeutronL3Base, role_data, step_config]
       docker_image: &neutron_l3_agent_image
         list_join:
         - '/'
         - [ {get_param: DockerNamespace}, {get_param: DockerNeutronL3AgentImage} ]
-      puppet_tags: neutron_config,neutron_l3_agent_config
-      config_volume: neutron
-      config_image:
-        list_join:
-          - '/'
-          - [ {get_param: DockerNamespace}, {get_param: DockerNeutronConfigImage} ]
+
+      puppet_config:
+        puppet_tags: neutron_config,neutron_l3_agent_config
+        config_volume: neutron
+        step_config: *step_config
+        config_image:
+          list_join:
+            - '/'
+            - [ {get_param: DockerNamespace}, {get_param: DockerNeutronConfigImage} ]
       kolla_config:
         /var/lib/kolla/config_files/neutron-l3-agent.json:
            command: /usr/bin/neutron-l3-agent --config-file /usr/share/neutron/neutron-dist.conf --config-dir /usr/share/neutron/l3_agent --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/l3_agent.ini
