sshd template, rename hiera key
This means we can remove the special BannerText hiera reference
in the puppet-tripleo profile

Change-Id: Id4c8b853fa0e9bcdffe2cf7cd1554a9be7451b25

--- a/puppet/services/sshd.yaml
+++ b/puppet/services/sshd.yaml
@@ -29,6 +29,6 @@ outputs:
     value:
       service_name: sshd
       config_settings:
-        BannerText: {get_param: BannerText}
+        tripleo::profile::base::sshd::bannertext: {get_param: BannerText}
       step_config: |
         include ::tripleo::profile::base::sshd
