--- a/docker/services/rabbitmq.yaml
+++ b/docker/services/rabbitmq.yaml
@@ -90,7 +90,7 @@ outputs:
               - /var/lib/config-data/rabbitmq/:/var/lib/kolla/config_files/src:ro
               - /etc/hosts:/etc/hosts:ro
               - /etc/localtime:/etc/localtime:ro
-              - rabbitmq:/var/lib/rabbitmq/
+              - /var/lib/rabbitmq:/var/lib/rabbitmq
             environment:
               - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
               - KOLLA_BOOTSTRAP=True
@@ -116,9 +116,14 @@ outputs:
               - /var/lib/config-data/rabbitmq/:/var/lib/kolla/config_files/src:ro
               - /etc/hosts:/etc/hosts:ro
               - /etc/localtime:/etc/localtime:ro
-              - rabbitmq:/var/lib/rabbitmq/
+              - /var/lib/rabbitmq:/var/lib/rabbitmq
             environment:
               - KOLLA_CONFIG_STRATEGY=COPY_ALWAYS
+      host_prep_tasks:
+        - name: create /var/lib/rabbitmq
+          file:
+            path: /var/lib/rabbitmq
+            state: directory
       upgrade_tasks:
         - name: Stop and disable rabbitmq service
           tags: step2
